objects/SupportTicket__c.object
<CustomObject>
    <label>Support Ticket</label>
    <pluralLabel>Support Tickets</pluralLabel>
    <nameField>
        <label>Support Ticket Number</label>
        <type>AutoNumber</type>
        <displayFormat>ST-{0000}</displayFormat>
        <fullName>Name</fullName>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
    </fields>
</CustomObject>